# oboe-music-player

./: .gitignore  README.md  build.gradle  settings.gradle
iolib/src/main/cpp/: CMakeLists.txt
iolib/src/main/cpp/player/: AudioRingBuffer.cpp  AudioRingBuffer.h  SampleBuffer.cpp  SampleBuffer.h  SampleSource.h  SimpleMultiPlayer.cpp  SimpleMultiPlayer.h  VocalMusicPlayer.cpp  VocalMusicPlayer.h
nativemusicplayer/: README.md  build.gradle
nativemusicplayer/debug/: output-metadata.json
nativemusicplayer/src/main/: AndroidManifest.xml
nativemusicplayer/src/main/cpp/: CMakeLists.txt  DrumPlayerJNI.cpp  NativePlayer.cpp  NativePlayer.h
nativemusicplayer/src/main/res/layout/: activity_audio_livekit_player.xml  activity_audio_track_player.xml  activity_simple_audio_player.xml
nativemusicplayer/src/main/res/values/: ic_launcher_background.xml  strings.xml
oboemusicplayer/: build.gradle
oboemusicplayer/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  LiveEffectEngine.cpp  LiveEffectEngine.h  OboeMusicPlayerRecorder.cpp  oboemusicplayerandrecorder.cpp
oboemusicplayer/src/main/cpp/Engines/: AudioRingBuffer.h  EarbackEngine.cpp  EarbackEngine.h  FullDuplexPass.h  LivekitAudioEffectEngine.cpp  LivekitAudioEffectEngine.h  PlayerAudioEngine.cpp  PlayerAudioEngine.h  RecordingEngine.cpp  RecordingEngine.h  SimpleAudioPlayer.cpp  SimpleAudioPlayer.h
oboemusicplayer/src/main/java/in/reconv/oboemusicplayer/: NativeLib.kt  (+3 more)
oboemusicplayerandrecorder/: build.gradle
oboemusicplayerandrecorder/src/main/cpp/: CMakeLists.txt  oboemusicplayerandrecorder.cpp
(+23 files in other folders)
